--- a/lab01_old/Cargo.toml
+++ b/lab01_old/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "lab01"
-version = "0.0.1"
+version = "0.1.0"
+authors = ["denis"]
 edition = "2018"
 
 [dependencies]
+log = "0.4.6"
